--- a/styles/home.css
+++ b/styles/home.css
@@ -377,6 +377,12 @@ header{
         width: 100%;
         height: 100%;
         margin: 0px;
+        user-drag: none;  
+        user-select: none;
+        -moz-user-select: none;
+        -webkit-user-drag: none;
+        -webkit-user-select: none;
+        -ms-user-select: none;
         animation: 1s cubic-bezier(0.215, 0.61, 0.355, 1) 0.5s 1 normal backwards running lbWRkT;
     }
 }
