--- a/styles/home.css
+++ b/styles/home.css
@@ -3,6 +3,7 @@
     padding: 0;
     box-sizing: border-box;
     font-family: 'roboto', sans-serif;
+    scroll-behavior: smooth;
 }
 ul{
     list-style: none;
@@ -24,6 +25,7 @@ body, html{
     background-color: #080808;
 
     color: #ffffff;
+
 }
 body{
     margin: 80px 0px 0px 0px;
