--- a/styles/home.css
+++ b/styles/home.css
@@ -951,7 +951,7 @@ header{
                 -o-transform: rotate(45deg);
                 transform: rotate(45deg);
                 border: 1px solid #373121;
-                content: "\25C7";
+                content: "";
                 font-size: 0;
             }
         }
@@ -976,7 +976,7 @@ header{
                 -o-transform: rotate(45deg);
                 transform: rotate(45deg);
                 border: 1px solid #373121;
-                content: "\25C7";
+                content: "";
                 font-size: 0;
             }
         }
@@ -999,7 +999,7 @@ header{
                 -o-transform: rotate(45deg);
                 transform: rotate(45deg);
                 border: 1px solid #373121;
-                content: "\25C7";
+                content: "";
                 font-size: 0;
             }
         }
@@ -1022,7 +1022,7 @@ header{
                 -o-transform: rotate(45deg);
                 transform: rotate(45deg);
                 border: 1px solid #373121;
-                content: "\25C7";
+                content: "";
                 font-size: 0;
             }
         }
@@ -1045,7 +1045,7 @@ header{
                 -o-transform: rotate(45deg);
                 transform: rotate(45deg);
                 border: 1px solid #373121;
-                content: "\25C7";
+                content: "";
                 font-size: 0;
             }
         }
@@ -1068,7 +1068,7 @@ header{
                 -o-transform: rotate(45deg);
                 transform: rotate(45deg);
                 border: 1px solid #373121;
-                content: "\25C7";
+                content: "";
                 font-size: 0;
             }
         }
@@ -1440,6 +1440,56 @@ header{
         -ms-transform: scale(1);
         -o-transform: scale(1);
         transform: scale(1);
+    }
+}
+.threeBtns{
+    height: 100px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    gap: 100px;
+    & .btnContainer{
+        display: inline-block;
+        padding: 6px 6px;
+    & a{
+        text-align: center;
+        line-height: 16px;
+        position: relative;
+        z-index: 0;
+        text-overflow: ellipsis;
+        height: 32px;
+        border-radius: 12px;
+        padding: 8px 16px;
+        color: #111111;
+
+        background: linear-gradient(315deg,#0bc4e2 0,#2c8cc2 100%);
+        /* color: #fff; */
+        font-size: 18px;
+        cursor: pointer;
+        transition: 0.1s all ease-in-out;
+        box-shadow: 0 10px 45px -10px rgba(11,196,226,.15), 
+                    0 0 20px -10px rgba(11,196,226,.35), 
+                    0 10px 30px -10px rgba(11,196,226,.25);
+        padding: 10px 20px;
+        
+
+
+        cursor: pointer;
+        display: inline-block;
+        transition: color 1s cubic-bezier(0.06, 0.81, 0, 0.98);
+        vertical-align: middle;
+        font-size: 13px;
+        font-weight: 600;
+        text-transform: uppercase;
+        letter-spacing: .08em;
+    }
+    &:hover a{
+        background: linear-gradient(315deg,#0bc4e2 0,#0bc4e2 50%,#2c8cc2 100%);
+        /* color: #fff; */
+        box-shadow: 0 10px 30px -10px rgba(11,196,226,.25), 
+                    0 10px 30px -10px rgba(11,196,226,.5), 
+                    0 10px 35px -10px rgba(11,196,226,.5);
+    }
     }
 }
 /* ------------------------------CONTENT END */
